After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674265 - Broken format strings
Broken format strings
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other All
: Normal blocker
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-17 15:19 UTC by LRN
Modified: 2012-05-01 18:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix format strings (2.08 KB, patch)
2012-04-17 15:20 UTC, LRN
committed Details | Review

Description LRN 2012-04-17 15:19:48 UTC
Format strings in ges-simple-timeline-layer.c, ges-timeline-object.c and ges-track-title-source.c are wrong.
Comment 1 LRN 2012-04-17 15:20:26 UTC
Created attachment 212217 [details] [review]
Fix format strings
Comment 2 Tim-Philipp Müller 2012-05-01 18:20:47 UTC
commit fdb06182fa7547ce522e688ea029c621b09778d6
Author: Руслан Ижбулатов <lrn1986@gmail.com>
Date:   Tue Apr 17 19:18:21 2012 +0400

    ges: fix some format strings in debug messages
    
    https://bugzilla.gnome.org/show_bug.cgi?id=674265