ges: fix some format strings in debug messages

https://bugzilla.gnome.org/show_bug.cgi?id=674265